@@ -1,3 +1,8 @@
+2004-03-05 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/browser.cpp:  Properly catch parse
+	errors in browser::load_url.
+
 2004-03-04 Braden McDaniel  <braden@endoframe.com>
 
 	* src/lookat/lookat.cpp:  Fixed unnecesary redundant calls to
